--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="format-detection" content="telephone=no">
-    <title>EINSTEIN Buscador de ondas electromagneticas y gravitacionales</title>
+    <title>GW EINSTEIN</title>
     <!-- Bootstrap -->
     <link href="../../../static/bootstrap/bootstrap-3.3.7-dist/css/bootstrap.min.css"
 
@@ -44,11 +44,19 @@
                     target="_blank"><img src="PngItem_2522307.png" style="max-width:140px"
 
                       alt="Einstein" title="Einstein" width="100%"></a></td>
-                <td style="width: 626px;"><span style="font-size:2.0em;color:#FFF;line-height:1.2em;">SEARCH
-                    FOR GRAVITATIONAL WAVES</span><span style="font-size:2.0em;color:#FFF;line-height:1.2em;"><br>
-                    GAMMA RAYS - SUPERNOVA&nbsp; AND<br>
-                  </span><span style="font-size:2.0em;color:#FFF;line-height:1.2em;">ELECTROMAGNETIC
-                    EMISSION</span></td>
+                <td style="width: 626px;">
+                  <div style="text-align: center;"><b><u><span style="font-size:2.0em;color:#FFF;line-height:1.2em;">GW
+                          EINSTEIN</span></u></b></div>
+                  <div style="text-align: center;"><br>
+                    <b><span style="font-size:2.0em;color:#FFF;line-height:1.2em;"></span></b></div>
+                  <div style="text-align: center;"><span style="font-size:2.0em;color:#FFF;line-height:1.2em;">SEARCH
+                      FOR GRAVITATIONAL WAVES</span><span style="font-size:2.0em;color:#FFF;line-height:1.2em;"></span><br>
+                    <span style="font-size:2.0em;color:#FFF;line-height:1.2em;">
+                      GAMMA RAYS - SUPERNOVA&nbsp; AND</span><br>
+                    <span style="font-size:2.0em;color:#FFF;line-height:1.2em;">
+                    </span><span style="font-size:2.0em;color:#FFF;line-height:1.2em;">ELECTROMAGNETIC
+                      EMISSION</span></div>
+                </td>
                 <td style="margin-left: 151px; width: 108px;"><img src="pngegg.png"
 
                     alt="NASA" title="NASA" style="width: 142px; height: 133px;"></td>
@@ -94,6 +102,9 @@
 
               style="color:#000"><span class="glyphicon glyphicon-question-sign"></span>
               Help</a> </div>
+          <h1>Team "BINARIO"</h1>
+          <h1>Members Team Victoria Lomanto - Walter Wagner</h1>
+          <p></p>
           <h1>Outstanding events</h1>
           <h1>Data Hub</h1>
           <p></p>
