--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -98,6 +98,10 @@
               Help</a> </div>
           <h1>Team "BINARIO"</h1>
           <h1>Members Team Victoria Lomanto - Walter Wagner</h1>
+          <p style="text-align: center;"><b><a href="https://github.com/walterm128/nasaappweb"
+                target="_blank">LINK TO GIT REPOSITORY</a><a href="https://github.com/walterm128/nasaappweb"
+                target="_blank"><br>
+              </a></b></p>
           <p></p>
           <h1>Outstanding events</h1>
           <h1>Data Hub</h1>
@@ -141,9 +145,6 @@ following 5 lines required to use Caltech Library Services for registering our D
               </a></b></div>
           <div style="text-align: center;"><b><a href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp"
                 target="_blank">LIGO ANDROID<br>
-              </a></b></div>
-          <div style="text-align: center;"><b><a href="https://github.com/walterm128/nasaappweb"
-                target="_blank">GIT THIS SITE<br>
               </a></b></div>
           <div style="text-align: center;"><b><a href="https://www.ligo.caltech.edu/page/teacher-professional-development"
                 target="_blank">TEACHER PROFESSIONAL DEVELOPMENT<br>
