--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -39,7 +39,7 @@
             <tbody>
               <tr>
                 <td style="width: 155px;"><a href="https://www.gw-openscience.org/"
-                    target="_blank"><img src="PngItem_2522307.png" style="max-width:140px"
+                    target="_blank"><img src="img/PngItem_2522307.png" style="max-width:140px"
                       alt="Einstein" title="Einstein" width="100%"></a></td>
                 <td style="width: 626px;">
                   <div style="text-align: center;"><b><u><span style="font-size:2.0em;color:#FFF;line-height:1.2em;">Project:
@@ -54,8 +54,8 @@
                     </span><span style="font-size:2.0em;color:#FFF;line-height:1.2em;">ELECTROMAGNETIC
                       EMISSION</span></div>
                 </td>
-                <td style="margin-left: 151px; width: 108px;"><img src="pngegg.png"
-                    alt="NASA" title="NASA" style="width: 142px; height: 133px;"></td>
+                <td style="margin-left: 151px; width: 108px;"><img src="img/Logo.jpg"
+                    alt="LOGO" title="LOGO" style="width: 142px; height: 133px;"></td>
               </tr>
             </tbody>
           </table>
