--- a/eventapi/html/allevents/LEARN.html
+++ b/eventapi/html/allevents/LEARN.html
@@ -7,11 +7,11 @@
   <body>
     <p style="color: rgb(0, 0, 0); font-family: Karla, Arial, sans-serif; font-size: 15px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgba(255, 255, 255, 0.95); text-decoration-style: initial; text-decoration-color: initial;"><br>
     </p>
-    <table border="0">
+    <table style="width: 1034px; height: 276px;" border="0">
       <tbody>
         <tr>
           <td style="text-align: center;"><span style="color: #050505;"><a href="index.html"><span
-                  style="font-size: 2em; line-height: 1.2em;"><img src="PngItem_2522307.png"
+                  style="font-size: 2em; line-height: 1.2em;"><img src="img/PngItem_2522307.png"
                     alt="E" title="e" style="width: 90px; height: 146px;"></span></a></span></td>
           <td><span style="color: #050505;"><span style="font-family: Verdana,Arial,Helvetica,sans-serif; font-size: 32px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;"></span><span
                 style="box-sizing: border-box; font-family: Verdana,Arial,Helvetica,sans-serif; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; font-size: 2em; line-height: 1.2em;">SEARCH
@@ -20,6 +20,8 @@
                 GAMMA RAYS - SUPERNOVA&nbsp; AND<br style="box-sizing: border-box;">
               </span><span style="box-sizing: border-box; font-family: Verdana,Arial,Helvetica,sans-serif; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; font-size: 2em; line-height: 1.2em;">ELECTROMAGNETIC
                 EMISSION</span></span></td>
+          <td><img src="img/Logo.jpg" alt="logo" title="logo"><br>
+          </td>
         </tr>
       </tbody>
     </table>
