--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -1756,7 +1756,8 @@ following 5 lines required to use Caltech Library Services for registering our D
         } </script></p>
     <p><br>
     </p>
-    <div style="text-align: center;"><img src="bunnysuitadj1.jpg" alt="LIGO" title="LIGO"></div>
+    <div style="text-align: center;"><img src="img/bunnysuitadj1.jpg" alt="LIGO"
+        title="LIGO"></div>
     <p><br>
       <input id="file" multiple="" onchange="startRead()" type="file"> </p>
     <h3>Progress:</h3>
