--- a/eventapi/html/allevents/EINSTE814.html
+++ b/eventapi/html/allevents/EINSTE814.html
@@ -109,7 +109,7 @@ following 5 lines required to use Caltech Library Services for registering our D
                       <div class="card-body" style="word-wrap:break-word;"><br>
                       </div>
                       DOI: <a href="https://doi.org/10.7935/zzw5-ak90" style="color:#9FF">https://doi.org/10.7935/zzw5-ak90</a></td>
-                    <td style="text-align: center;"><img src="GW190814-v1-H1-qscan.png"
+                    <td style="text-align: center;"><img src="img/GW190814-v1-H1-qscan.png"
                         alt="T" title="T" style="width: 578px; height: 289px;"></td>
                   </tr>
                 </tbody>
