--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -103,6 +103,8 @@
                 target="_blank"><br>
               </a></b></p>
           <p></p>
+          <h1><b><a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/ONDASGRAVITACIONALES.pdf"
+                target="_blank">PDF Work Itinerary</a></b></h1>
           <h1>Outstanding events</h1>
           <h1>Data Hub</h1>
           <p></p>
@@ -123,8 +125,6 @@
           <!--
 following 5 lines required to use Caltech Library Services for registering our DOIs for open data releases when a DOI exists.-->
           <br>
-          <div style="text-align: center;"><b><a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/ONDASGRAVITACIONALES.pdf"
-                target="_blank">PDF Work Itinerary</a></b></div>
           <div style="text-align: center;"><b><a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/ONDASGRAVITACIONALES.pdf"><br>
               </a></b></div>
           <div style="text-align: center;"><b><i>LINKS EXTERNAL INFORMATION</i><br>
