--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -99,12 +99,13 @@
           <h1>Team "BINARIO"</h1>
           <h1>Members Team Victoria Lomanto - Walter Wagner</h1>
           <p style="text-align: center;"><b><a href="https://github.com/walterm128/nasaappweb"
-                target="_blank">LINK TO GIT REPOSITORY</a><a href="https://github.com/walterm128/nasaappweb"
+                target="_blank">GIT REPOSITORY LINK</a><a href="https://github.com/walterm128/nasaappweb"
                 target="_blank"><br>
               </a></b></p>
           <p></p>
-          <h1><b><a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/ONDASGRAVITACIONALES.pdf"
-                target="_blank">PDF Work Itinerary</a></b></h1>
+          <p style="text-align: center;"><b><a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/ONDASGRAVITACIONALES.pdf"
+                target="_blank">PDF Work Itinerary Link<br>
+              </a></b></p>
           <h1>Outstanding events</h1>
           <h1>Data Hub</h1>
           <p></p>
