--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -96,7 +96,7 @@
               New Search</a> &nbsp; &nbsp; <a href="https://www.gw-openscience.org/eventportaldocs"
               style="color:#000"><span class="glyphicon glyphicon-question-sign"></span>
               Help</a> </div>
-          <h1>Team "BINARIO"</h1>
+          <h1>Team "La NASA en tu patio trasero"</h1>
           <h1>Members Team Victoria Lomanto - Walter Wagner</h1>
           <p style="text-align: center;"><b><a href="https://github.com/walterm128/nasaappweb"
                 target="_blank">GIT REPOSITORY LINK</a><a href="https://github.com/walterm128/nasaappweb"
