--- a/eventapi/html/allevents/EINSTE814.html
+++ b/eventapi/html/allevents/EINSTE814.html
@@ -71,6 +71,8 @@ following 5 lines required to use Caltech Library Services for registering our D
             <div class="card-body" style="word-wrap:break-word;">
               <div style="text-align: center;">
                 <h1><u><b>DATA HUB</b></u></h1>
+                <p><span style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">Compact
+                    Binary Mergers Observed by LIGO</span></p>
               </div>
               <table style="width: 100%" border="0">
                 <tbody>
