--- a/eventapi/html/allevents/gracedb.ligo.org/superevents/S190814bv/index.html
+++ b/eventapi/html/allevents/gracedb.ligo.org/superevents/S190814bv/index.html
@@ -13,8 +13,7 @@
     <link type="text/css" rel="stylesheet" href="../../static/ekko-lightbox/dist/ekko-lightbox.css" />
     <link rel="stylesheet" href="../../static/trumbowyg/dist/ui/trumbowyg.min.css" />
     <!--
-      <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700|Roboto+Mono&display=fallback">      <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Alegreya:700" rel="stylesheet" type="text/css" />
-      <style>body,input{font-family:"Roboto","Helvetica Neue",Helvetica,Arial,sans-serif}code,kbd,pre{font-family:"Roboto Mono","Courier New",Courier,monospace}</style>-->
+      <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700|Roboto+Mono&display=fallback">      <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Alegreya:700" rel="stylesheet" type="text/css" />      <style>body,input{font-family:"Roboto","Helvetica Neue",Helvetica,Arial,sans-serif}code,kbd,pre{font-family:"Roboto Mono","Courier New",Courier,monospace}</style>-->
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="data:," />
@@ -568,7 +567,7 @@ require([
 </script> </head>
   <body id="" class="tundra eventDetail">
     <nav class="navbar navbar-expand-md navbar-gracedb navbar-dark"> <a class="navbar-brand text-white"
-        href="https://gracedb.ligo.org/"> <img src="../../../PngItem_2522307.png"
+        href="https://gracedb.ligo.org/"> <img src="../../../img/PngItem_2522307.png"
           style="width:40px;" alt="Einstein" title="Einstein" /> GraceDB </a> <button
         class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span> </button>
