--- a/eventapi/html/allevents/gracedb.ligo.org/superevents/S190814bv/index.html
+++ b/eventapi/html/allevents/gracedb.ligo.org/superevents/S190814bv/index.html
@@ -567,10 +567,11 @@ require([
 </script> </head>
   <body id="" class="tundra eventDetail">
     <nav class="navbar navbar-expand-md navbar-gracedb navbar-dark"> <a class="navbar-brand text-white"
-        href="Compact%20Binary%20Mergers%20Observed%20by%20LIGO"> <img src="../../../img/PngItem_2522307.png"
-          style="width:40px;" alt="Einstein" title="Einstein" /> GraceDB </a> <button
-        class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span> </button>
+        href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/">
+        <img src="../../../img/PngItem_2522307.png" style="width:40px;" alt="Einstein"
+          title="Einstein" /> GraceDB </a> <button class="navbar-toggler" type="button"
+        data-toggle="collapse" data-target="#collapsibleNavbar"> <span class="navbar-toggler-icon"></span>
+      </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
         </ul>
