--- a/eventapi/html/allevents/gracedb.ligo.org/superevents/S190814bv/index.html
+++ b/eventapi/html/allevents/gracedb.ligo.org/superevents/S190814bv/index.html
@@ -569,10 +569,11 @@ require([
     <nav class="navbar navbar-expand-md navbar-gracedb navbar-dark"> <a class="navbar-brand text-white"
         href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/">
         <img src="../../../img/PngItem_2522307.png" style="width:40px;" alt="Einstein"
-          title="Einstein" /> GraceDB </a> <button class="navbar-toggler" type="button"
-        data-toggle="collapse" data-target="#collapsibleNavbar"> <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          title="Einstein" /> GraceDB </a><a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span> </button> </a>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar"><a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/">
+        </a>
         <ul class="navbar-nav">
         </ul>
       </div>
