--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -35,8 +35,7 @@
                     <p class="bounce animated"><br><strong><span style="text-decoration: underline;">Project:</span></strong><br><strong><span style="text-decoration: underline;">                          "GW EINSTEIN"</span></strong><br> SEARCH FOR GRAVITATIONAL WAVES<br>GAMMA
                         RAYS - SUPERNOVA&nbsp; AND<br>ELECTROMAGNETIC EMISSION<br><br></p><a class="btn btn-outline-primary" role="button" href="https://www.ligo.caltech.edu">LIGO</a></div>
             </div>
-            <p class="bounce animated">Team "La NASA en tu patio trasero"<br> Members Team Victoria Lomanto - Walter Wagner<br> <a href="https://github.com/walterm128/nasaappweb"><strong>GIT REPOSITORY LINK</strong></a><br><br> <a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/ONDASGRAVITACIONALES.pdf"><strong>PDF Work Itinerary Link</strong></a><br><br>                Outstanding events<br> Data Hub<br></p>
-        </section>
+            <p class="bounce animated">Team "La NASA en tu patio trasero"<br> Members Team Victoria Lomanto - Walter Wagner<br> <a href="https://github.com/walterm128/nasaappweb"><strong>GIT REPOSITORY LINK</strong></a><br><br> <a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/ONDASGRAVITACIONALES.pdf"><strong>PDF Work Itinerary Link</strong></a><br><br>                Outstanding events<br> Data Hub<br></p><img src="assets/img/Logo.jpg"></section>
         <section class="portfolio-block photography">
             <div class="container">
                 <div class="row no-gutters">
