--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -21,7 +21,7 @@
                 id="navbarNav">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.caltech.edu">LSC</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.org">LSC</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.caltech.edu">LIGO</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="hire-me.html">GWOSC<br></a></li>
                 </ul>
