--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -64,7 +64,7 @@
                     <table class="table">
                         <thead>
                             <tr>
-                                <th class="text-center"><button class="btn btn-primary" type="button">VER CATALAGO</button></th>
+                                <th class="text-center"><a class="btn btn-primary" role="button" href="catalague.html">View Catalogue</a></th>
                                 <th>Column 2</th>
                             </tr>
                         </thead>
@@ -102,9 +102,7 @@
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-lightbulb-outline"></i></div>
                             <div class="card-body">
                                 <h3 class="card-title" style="font-family: 'Abril Fatface', cursive;"><strong>LINKS EXTERNAL INFORMATION</strong><br></h3>
-                                <p class="text-left card-text" data-bs-hover-animate="bounce"><br><a href="https://gracedb.ligo.org/superevents/public/O3/"><strong>PUBLIC ALERT BY LIGO (EXTERNAL DATA)</strong></a><br><br><a href="https://gracedb.ligo.org/superevents/public/O3/"><strong>              </strong></a><br>                                    <a href="https://www.zooniverse.org/projects/zooniverse/gravity-spy"><strong>GRAVITY SPY</strong></a><br><br><a href="https://www.zooniverse.org/projects/zooniverse/gravity-spy"><strong>              </strong></a><br>                                    <a href="LEARN.html"><strong>LEARN</strong></a><br><a href="LEARN.html"><strong>                GRAVITY</strong></a><br><br><a href="LEARN.html"><strong>              </strong></a><br> <a href="HOWPROCESSDATALIGO.html"><strong>HOW TO PROCESS DATA LIGO</strong></a><br><br>
-                                    <a
-                                        href="HOWPROCESSDATALIGO.html"><strong>              </strong></a><br> <a href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp"><strong>LIGO ANDROID</strong></a><br><br><a href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp"><strong>              </strong></a><br>                                        <a href="https://www.ligo.caltech.edu/page/teacher-professional-development"><strong>TEACHER PROFESSIONAL DEVELOPMENT</strong></a><br><br></p>
+                                <p class="text-center card-text" data-bs-hover-animate="bounce"><br><a href="https://gracedb.ligo.org/superevents/public/O3/"><strong>PUBLIC ALERT BY LIGO (EXTERNAL DATA)</strong></a><br></p>
                             </div>
                         </div>
                     </div>
@@ -113,7 +111,37 @@
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i></div>
                             <div class="card-body">
                                 <h3 class="card-title" style="font-family: 'Abril Fatface', cursive;"><strong>READ EXTERNAL SOURCE</strong><br></h3>
-                                <p class="card-text"><strong>READ CSV FILE FROM</strong><br> <a href="https://www.gw-openscience.org/eventapi/csv/GWTC-1-confident/"><strong><span style="text-decoration: underline;">GWOSC</span></strong></a><br></p>
+                                <p class="card-text"><a href="https://www.zooniverse.org/projects/zooniverse/gravity-spy"><strong>GRAVITY SPY</strong></a><br></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="heading"></div>
+                <div class="row">
+                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
+                        <div class="card special-skill-item border-0">
+                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-star-outline"></i></div>
+                            <div class="card-body">
+                                <h3 class="card-title" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);"><a href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp"><strong><span style="text-decoration: underline;">LIGO ANDROID</span></strong></a><br></h3>
+                                <p class="card-text"><br></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
+                        <div class="card special-skill-item border-0">
+                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-lightbulb-outline"></i></div>
+                            <div class="card-body">
+                                <p class="text-center card-text" data-bs-hover-animate="bounce"><br><a href="https://gracedb.ligo.org/superevents/public/O3/"><strong>PUBLIC ALERT BY LIGO (EXTERNAL DATA)</strong></a><br></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
+                        <div class="card special-skill-item border-0">
+                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i></div>
+                            <div class="card-body">
+                                <p class="card-text"><a href="LEARN.html"><strong><span style="text-decoration: underline;">LEARN</span></strong></a><br><a href="LEARN.html"><strong>GRAVITY</strong></a><br></p>
                             </div>
                         </div>
                     </div>
