--- a/eventapi/html/allevents/catalague.html
+++ b/eventapi/html/allevents/catalague.html
@@ -31,13 +31,12 @@
     </nav>
     <main class="page cv-page">
         <section class="portfolio-block block-intro border-bottom">
-            <div class="container">
+            <div class="container text-center">
                 <div class="about-me">
                     <p style="font-family: 'Abril Fatface', cursive;">Catalogue</p>
                 </div>
             </div>
-        </section>
-        <section class="text-left portfolio-block cv"><table class="tablesaw" data-tablesaw-sortable="" data-tablesaw-sortable-switch=""
+            <div class="container text-left"><table class="tablesaw" data-tablesaw-sortable="" data-tablesaw-sortable-switch=""
 
               data-tablesaw-mode="columntoggle" style="width: 940px; height: 1716px;">
               <thead style="background-color:#ccc;">
@@ -320,7 +319,8 @@
                   </td>
                 </tr>
               </tbody>
-            </table></section>
+            </table></div>
+        </section>
     </main>
     <footer class="page-footer">
         <div class="container">
