--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alex+Brush">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arizonia">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
@@ -34,7 +35,7 @@
         <section class="portfolio-block block-intro">
             <div class="container"><img class="bounce animated" src="assets/img/PngItem_2522307.png" style="width: 145px;">
                 <div class="about-me">
-                    <p class="bounce animated" style="font-family: 'Abril Fatface', cursive;"><br><strong><span style="text-decoration: underline;">Project:</span></strong><br><strong><span style="text-decoration: underline;">                          "GW EINSTEIN"</span></strong><br> SEARCH FOR GRAVITATIONAL WAVES<br>GAMMA
+                    <p class="bounce animated" style="font-family: Arizonia, cursive;"><br><strong><span style="text-decoration: underline;">Project:</span></strong><br><strong><span style="text-decoration: underline;">                          "GW EINSTEIN"</span></strong><br> SEARCH FOR GRAVITATIONAL WAVES<br>GAMMA
                         RAYS - SUPERNOVA&nbsp; AND<br>ELECTROMAGNETIC EMISSION<br><br></p>
                 </div>
             </div>
@@ -88,6 +89,7 @@
                 <div class="heading">
                     <h2 style="font-family: 'Abril Fatface', cursive;">Special Skills</h2>
                 </div>
+                <h3 class="text-center" style="font-family: 'Abril Fatface', cursive;"><strong>LINKS EXTERNAL INFORMATION</strong><br></h3>
                 <div class="row">
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
@@ -102,7 +104,6 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-lightbulb-outline"></i></div>
                             <div class="card-body">
-                                <h3 class="card-title" style="font-family: 'Abril Fatface', cursive;"><strong>LINKS EXTERNAL INFORMATION</strong><br></h3>
                                 <p class="text-center card-text" data-bs-hover-animate="bounce"><br><a href="https://gracedb.ligo.org/superevents/public/O3/"><strong>PUBLIC ALERT BY LIGO (EXTERNAL DATA)</strong></a><br></p>
                             </div>
                         </div>
