--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -35,7 +35,7 @@
         <section class="portfolio-block block-intro">
             <div class="container"><img class="bounce animated" src="assets/img/PngItem_2522307.png" style="width: 145px;">
                 <div class="about-me">
-                    <p class="bounce animated" style="font-family: Arizonia, cursive;"><br><strong><span style="text-decoration: underline;">Project:</span></strong><br><strong><span style="text-decoration: underline;">                          "GW EINSTEIN"</span></strong><br> SEARCH FOR GRAVITATIONAL WAVES<br>GAMMA
+                    <p class="bounce animated" style="font-family: 'Abril Fatface', cursive;"><br><strong><span style="text-decoration: underline;">Project:</span></strong><br><strong><span style="text-decoration: underline;">                          "GW EINSTEIN"</span></strong><br> SEARCH FOR GRAVITATIONAL WAVES<br>GAMMA
                         RAYS - SUPERNOVA&nbsp; AND<br>ELECTROMAGNETIC EMISSION<br><br></p>
                 </div>
             </div>
