--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -27,6 +27,7 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.org">LSC</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.caltech.edu">LIGO</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.gw-openscience.org/">GWOSC<br></a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.gw-openscience.org/"><strong>About us</strong><br></a></li>
                 </ul>
             </div>
         </div>
@@ -157,7 +158,7 @@
     </section>
     <footer class="page-footer">
         <div class="container">
-            <div class="links"><a href="#" style="font-family: 'Abril Fatface', cursive;">About me</a></div>
+            <div class="links"><a href="#" style="font-family: 'Abril Fatface', cursive;">About us</a></div>
             <div class="social-icons"></div>
         </div>
     </footer>
