--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alex+Brush">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arizonia">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bigshot+One">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
@@ -36,7 +37,7 @@
         <section class="portfolio-block block-intro">
             <div class="container"><img class="bounce animated" src="assets/img/PngItem_2522307.png" style="width: 145px;">
                 <div class="about-me">
-                    <p class="bounce animated" style="font-family: 'Abril Fatface', cursive;"><br><strong><span style="text-decoration: underline;">Project:</span></strong><br><strong><span style="text-decoration: underline;">                          "GW EINSTEIN"</span></strong><br> SEARCH FOR GRAVITATIONAL WAVES<br>GAMMA
+                    <p class="bounce animated" style="font-family: 'Bigshot One', cursive;"><br><strong><span style="text-decoration: underline;">Project:</span></strong><br><strong><span style="text-decoration: underline;">                          "GW EINSTEIN"</span></strong><br> SEARCH FOR GRAVITATIONAL WAVES<br>GAMMA
                         RAYS - SUPERNOVA&nbsp; AND<br>ELECTROMAGNETIC EMISSION<br><br></p>
                 </div>
             </div>
