--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -41,7 +41,7 @@
                         RAYS - SUPERNOVA&nbsp; AND<br>ELECTROMAGNETIC EMISSION<br><br></p>
                 </div>
             </div>
-            <p class="bounce animated" style="font-family: 'Abril Fatface', cursive;">Team "La NASA en tu patio trasero"<br> Members Team Victoria Lomanto - Walter Wagner<br> <a href="https://github.com/walterm128/nasaappweb"><strong>GIT REPOSITORY LINK</strong></a><br><br> <a href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/ONDASGRAVITACIONALES.pdf"><strong>PDF Work Itinerary Link</strong></a><br><br>                Outstanding events<br> Data Hub<br></p><img src="assets/img/Logo.png"></section>
+            <p class="bounce animated" style="font-family: 'Abril Fatface', cursive;">Team "La NASA en tu patio trasero"<br> Members Team Victoria Lomanto - Walter Wagner<br>Outstanding events<br> Data Hub<br></p><img src="assets/img/Logo.png"></section>
         <section class="portfolio-block photography">
             <div class="container">
                 <div class="row no-gutters">
@@ -114,7 +114,6 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i></div>
                             <div class="card-body">
-                                <h3 class="card-title" style="font-family: 'Abril Fatface', cursive;"><strong>READ EXTERNAL SOURCE</strong><br></h3>
                                 <p class="card-text"><a href="https://www.zooniverse.org/projects/zooniverse/gravity-spy"><strong>GRAVITY SPY</strong></a><br></p>
                             </div>
                         </div>
@@ -145,7 +144,7 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i></div>
                             <div class="card-body">
-                                <p class="card-text"><a href="LEARN.html"><strong><span style="text-decoration: underline;">LEARN</span></strong></a><br><a href="LEARN.html"><strong>GRAVITY</strong></a><br></p>
+                                <p class="card-text"><a href="LEARN.html"><strong><span style="text-decoration: underline;">LEARN</span></strong></a><strong><span style="text-decoration: underline;">&nbsp;</span></strong><a href="LEARN.html"><strong>GRAVITY</strong></a><br></p>
                             </div>
                         </div>
                     </div>
