--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bigshot+One">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
 </head>
 
@@ -79,7 +80,7 @@
                             </tr>
                             <tr>
                                 <td></td>
-                                <td>Cell 4</td>
+                                <td></td>
                             </tr>
                         </tbody>
                     </table>
@@ -89,15 +90,15 @@
         <section class="portfolio-block skills">
             <div class="container">
                 <div class="heading">
-                    <h2 style="font-family: 'Abril Fatface', cursive;">Special Skills</h2>
+                    <h2 data-aos="zoom-out" style="font-family: 'Abril Fatface', cursive;">Special Skills</h2>
                 </div>
-                <h3 class="text-center" style="font-family: 'Abril Fatface', cursive;"><strong>LINKS EXTERNAL INFORMATION</strong><br></h3>
+                <h3 class="text-center" data-aos="zoom-out" style="font-family: 'Abril Fatface', cursive;"><strong>LINKS EXTERNAL INFORMATION</strong><br></h3>
                 <div class="row">
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-star-outline"></i></div>
                             <div class="card-body">
-                                <h3 class="card-title" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);"><a href="https://www.ligo.caltech.edu/page/educational-resources">Educational Resources</a><br></h3>
+                                <h3 class="card-title" data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);"><a href="https://www.ligo.caltech.edu/page/educational-resources">Educational Resources</a><br></h3>
                                 <p class="card-text">Whether you're a K-12 educator, a parent, or an interested student, you should browse our education web pages. There's something fun and educational here for everyone.<br></p>
                             </div>
                         </div>
@@ -114,7 +115,7 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i></div>
                             <div class="card-body">
-                                <p class="card-text"><a href="https://www.zooniverse.org/projects/zooniverse/gravity-spy"><strong>GRAVITY SPY</strong></a><br></p>
+                                <p class="card-text" data-bs-hover-animate="bounce"><a href="https://www.zooniverse.org/projects/zooniverse/gravity-spy"><strong>GRAVITY SPY</strong></a><br></p>
                             </div>
                         </div>
                     </div>
@@ -127,7 +128,7 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-star-outline"></i></div>
                             <div class="card-body">
-                                <h3 class="card-title" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);"><a href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp"><strong><span style="text-decoration: underline;">LIGO ANDROID</span></strong></a><br></h3>
+                                <h3 class="card-title" data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);"><a href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp"><strong><span style="text-decoration: underline;">LIGO ANDROID</span></strong></a><br></h3>
                                 <p class="card-text"><br></p>
                             </div>
                         </div>
@@ -144,7 +145,7 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i></div>
                             <div class="card-body">
-                                <p class="card-text"><a href="LEARN.html"><strong><span style="text-decoration: underline;">LEARN</span></strong></a><strong><span style="text-decoration: underline;">&nbsp;</span></strong><a href="LEARN.html"><strong>GRAVITY</strong></a><br></p>
+                                <p class="card-text" data-bs-hover-animate="bounce"><a href="LEARN.html"><strong><span style="text-decoration: underline;">LEARN</span></strong></a><strong><span style="text-decoration: underline;">&nbsp;</span></strong><a href="LEARN.html"><strong>GRAVITY</strong></a><br></p>
                             </div>
                         </div>
                     </div>
@@ -153,7 +154,7 @@
         </section>
     </main>
     <section class="portfolio-block website gradient">
-        <div class="container text-center"><img src="assets/img/bunnysuitadj1.jpg"></div>
+        <div class="container text-center"><img data-bs-hover-animate="pulse" src="assets/img/bunnysuitadj1.jpg"></div>
         <div></div>
     </section>
     <footer class="page-footer">
@@ -165,6 +166,7 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
     <script src="assets/js/theme.js"></script>
 </body>
