--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -69,7 +69,7 @@
                     <table class="table">
                         <thead>
                             <tr>
-                                <th class="text-center"><a class="btn btn-primary" role="button" href="catalague.html">View Catalogue</a></th>
+                                <th class="text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="catalague.html">View Catalogue</a></th>
                                 <th></th>
                             </tr>
                         </thead>
