--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -151,6 +151,35 @@
                     </div>
                 </div>
             </div>
+            <div class="container">
+                <div class="heading"></div>
+                <div class="row">
+                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
+                        <div class="card special-skill-item border-0">
+                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-star-outline"></i></div>
+                            <div class="card-body">
+                                <h3 data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);"><a href="https://spaceplace.nasa.gov/gravitational-waves/sp/"><br>GRAVITATIONAL WAVES<br></a><br></h3>
+                                <p class="card-text"><br></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
+                        <div class="card special-skill-item border-0">
+                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-lightbulb-outline"></i></div>
+                            <div class="card-body">
+                                <p class="text-center card-text" data-bs-hover-animate="bounce"></p><a class="card-link" href="https://spaceplace.nasa.gov/supernova/en/">SUPERNOVA</a></div>
+                        </div>
+                    </div>
+                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
+                        <div class="card special-skill-item border-0">
+                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i></div>
+                            <div class="card-body">
+                                <p class="card-text" data-bs-hover-animate="bounce"><a href="[22:40, 4/10/2020] Victoria Space App NASA: https://spaceplace.nasa.gov/magic-windows/en/ [22:40, 4/10/2020] Walter M: "><span style="text-decoration: underline;">ELECTROMAGNETIC SPECTRUM</span></a><br></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <section class="portfolio-block website gradient">
