--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -26,6 +26,7 @@
                 id="navbarNav">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="docs/ONDASGRAVITACIONALES.pdf">Project</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.org">LSC</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.caltech.edu">LIGO</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.gw-openscience.org/">GWOSC<br></a></li>
@@ -98,7 +99,7 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-star-outline"></i></div>
                             <div class="card-body">
-                                <h3 class="card-title" data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);"><a href="https://www.ligo.caltech.edu/page/educational-resources">Educational Resources</a><br></h3>
+                                <h3 class="card-title" data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);font-size: 25px;"><a href="https://www.ligo.caltech.edu/page/educational-resources">Educational Resources</a><br></h3>
                                 <p class="card-text">Whether you're a K-12 educator, a parent, or an interested student, you should browse our education web pages. There's something fun and educational here for everyone.<br></p>
                             </div>
                         </div>
@@ -107,14 +108,14 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-lightbulb-outline"></i></div>
                             <div class="card-body">
-                                <p class="text-center card-text" data-bs-hover-animate="bounce"><br><a href="https://gracedb.ligo.org/superevents/public/O3/"><strong>PUBLIC ALERT BY LIGO (EXTERNAL DATA)</strong></a><br></p>
+                                <p class="text-center card-text" data-bs-hover-animate="bounce" style="font-size: 22px;"><br><a href="https://gracedb.ligo.org/superevents/public/O3/"><strong>PUBLIC ALERT BY LIGO (EXTERNAL DATA)</strong></a><br></p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i></div>
-                            <div class="card-body">
+                            <div class="card-body" style="font-size: 22px;">
                                 <p class="card-text" data-bs-hover-animate="bounce"><a href="https://www.zooniverse.org/projects/zooniverse/gravity-spy"><strong>GRAVITY SPY</strong></a><br></p>
                             </div>
                         </div>
@@ -128,7 +129,7 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-star-outline"></i></div>
                             <div class="card-body">
-                                <h3 class="card-title" data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);"><a href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp"><strong><span style="text-decoration: underline;">LIGO ANDROID</span></strong></a><br></h3>
+                                <h3 class="card-title" data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);font-size: 20px;"><a href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp"><strong><span style="text-decoration: underline;">LIGO ANDROID</span></strong></a><br></h3>
                                 <p class="card-text"><br></p>
                             </div>
                         </div>
@@ -137,7 +138,7 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-lightbulb-outline"></i></div>
                             <div class="card-body">
-                                <p class="text-center card-text" data-bs-hover-animate="bounce"><br><a href="https://gracedb.ligo.org/superevents/public/O3/"><strong>PUBLIC ALERT BY LIGO (EXTERNAL DATA)</strong></a><br></p>
+                                <p class="text-center card-text" data-bs-hover-animate="bounce" style="font-size: 20px;"><br><a href="https://gracedb.ligo.org/superevents/public/O3/"><strong>PUBLIC ALERT BY LIGO (EXTERNAL DATA)</strong></a><br></p>
                             </div>
                         </div>
                     </div>
@@ -145,7 +146,7 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i></div>
                             <div class="card-body">
-                                <p class="card-text" data-bs-hover-animate="bounce"><a href="LEARN.html"><strong><span style="text-decoration: underline;">LEARN</span></strong></a><strong><span style="text-decoration: underline;">&nbsp;</span></strong><a href="LEARN.html"><strong>GRAVITY</strong></a><br></p>
+                                <p class="card-text" data-bs-hover-animate="bounce" style="font-size: 20px;"><a href="LEARN.html"><strong><span style="text-decoration: underline;">LEARN</span></strong></a><strong><span style="text-decoration: underline;">&nbsp;</span></strong><a href="LEARN.html"><strong>GRAVITY</strong></a><br></p>
                             </div>
                         </div>
                     </div>
@@ -158,7 +159,7 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-star-outline"></i></div>
                             <div class="card-body">
-                                <h3 data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);"><a href="https://spaceplace.nasa.gov/gravitational-waves/sp/"><br>GRAVITATIONAL WAVES<br></a><br></h3>
+                                <h3 data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);"><a href="https://spaceplace.nasa.gov/gravitational-waves/sp/" style="font-size: 20px;"><br>GRAVITATIONAL WAVES<br></a><br></h3>
                                 <p class="card-text"><br></p>
                             </div>
                         </div>
@@ -167,14 +168,41 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-lightbulb-outline"></i></div>
                             <div class="card-body">
-                                <p class="text-center card-text" data-bs-hover-animate="bounce"></p><a class="card-link" href="https://spaceplace.nasa.gov/supernova/en/">SUPERNOVA</a></div>
+                                <p class="text-center card-text" data-bs-hover-animate="bounce"></p><a class="card-link" href="https://spaceplace.nasa.gov/supernova/en/" style="font-size: 20px;"><strong>SUPERNOVA</strong></a></div>
                         </div>
                     </div>
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i></div>
                             <div class="card-body">
-                                <p class="card-text" data-bs-hover-animate="bounce"><a href="[22:40, 4/10/2020] Victoria Space App NASA: https://spaceplace.nasa.gov/magic-windows/en/ [22:40, 4/10/2020] Walter M: "><span style="text-decoration: underline;">ELECTROMAGNETIC SPECTRUM</span></a><br></p>
+                                <p class="card-text" data-bs-hover-animate="bounce"><a href="[22:40, 4/10/2020] Victoria Space App NASA: https://spaceplace.nasa.gov/magic-windows/en/ [22:40, 4/10/2020] Walter M: "><strong><span style="text-decoration: underline;">ELECTROMAGNETIC SPECTRUM</span></strong></a><br></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="heading"></div>
+                <div class="row">
+                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
+                        <div class="card special-skill-item border-0">
+                            <div class="card-header bg-transparent border-0"></div>
+                        </div>
+                    </div>
+                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
+                        <div class="card special-skill-item border-0">
+                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-lightbulb-outline"></i></div>
+                            <div class="card-body">
+                                <h3 data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);"><a href="https://www.ligo.org/sp/science/Publication-GW170817MMA/"><br><strong><span style="text-decoration: underline;">BINARY SYSTEM OF NEUTRON STARS</span></strong><br></a><br></h3>
+                                <p class="card-text"><br></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
+                        <div class="card special-skill-item border-0">
+                            <div class="card-header bg-transparent border-0"></div>
+                            <div class="card-body">
+                                <p class="card-text" data-bs-hover-animate="bounce"><br></p>
                             </div>
                         </div>
                     </div>
